--- a/src/components/Lobby/lobby.module.css
+++ b/src/components/Lobby/lobby.module.css
@@ -41,6 +41,7 @@
   align-items: center;
   justify-content: flex-start;
   font-weight: 300;
+  overflow-x: auto;
 }
 
 .inputLabel {
